--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
    
   </head>
   <body>
-    <input id="amount" type="text" placeholder="100">
-    <label><input id="test_input" type="text" list="currencies" placeholder="Currency"></label>
-    <datalist id="currencies"> </datalist>
+    <input id="name" type="text" placeholder="Currency">
+    <!-- <label><input id="test_input" type="text" list="currencies" placeholder="Currency"></label>
+    <datalist id="currencies"></datalist> -->
 
-    <div id="result"><h3></h3></div>
-    <!-- <div class="tablecontent">
-       <div id="results">
-        <table id="newtable1">
-          <thead><tr></tr></thead>
-          <tbody><tr></tr></tbody>
-        </table></br>
-      </div>
-    </div> -->
+    <div id="result"><br>
+      <table id = "table1">
+        <thead><tr></tr></thead>
+        <tbody><tr></tr></tbody>
+      </table><br>   
+    </div>
+
+    </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src="script.js"></script>
   </body>
